crates/au-cli/tests/it/snapshots/it__scenarios__any-star-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 20,
                        "line_col": {
                          "end": {
                            "col": 21,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/any-star-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "any-star-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "any-star-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/any-star-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "content": "items",
            "kind": "inline_code",
            "span": {
              "end": 77,
              "line_col": {
                "end": {
                  "col": 8,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 70
            }
          },
          {
            "content": "any*[]",
            "kind": "inline_code",
            "span": {
              "end": 89,
              "line_col": {
                "end": {
                  "col": 20,
                  "line": 8
                },
                "start": {
                  "col": 12,
                  "line": 8
                }
              },
              "start": 81
            }
          },
          {
            "content": "note",
            "kind": "inline_code",
            "span": {
              "end": 181,
              "line_col": {
                "end": {
                  "col": 43,
                  "line": 9
                },
                "start": {
                  "col": 37,
                  "line": 9
                }
              },
              "start": 175
            }
          },
          {
            "content": "note*[]",
            "kind": "inline_code",
            "span": {
              "end": 230,
              "line_col": {
                "end": {
                  "col": 12,
                  "line": 10
                },
                "start": {
                  "col": 3,
                  "line": 10
                }
              },
              "start": 221
            }
          },
          {
            "content": "any*",
            "kind": "inline_code",
            "span": {
              "end": 264,
              "line_col": {
                "end": {
                  "col": 46,
                  "line": 10
                },
                "start": {
                  "col": 40,
                  "line": 10
                }
              },
              "start": 258
            }
          }
        ],
        "claim": [
          "gallery"
        ],
        "closure": [
          "gallery"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "items",
            "origins": [
              {
                "name": "gallery",
                "origin_path": "<root>/scenarios/any-star-clean/type/gallery.type.yaml",
                "required": true,
                "shape": "any*[]"
              }
            ],
            "required": true,
            "shape": "any*[]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 46,
                        "line_col": {
                          "end": {
                            "col": 22,
                            "line": 4
                          },
                          "start": {
                            "col": 5,
                            "line": 4
                          }
                        },
                        "start": 29
                      },
                      "file": "<root>/scenarios/any-star-clean/gallery.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "kind": "reference",
                      "target": "diagram.pdf"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "kind": "reference",
                  "target": "diagram.pdf"
                }
              },
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 64,
                        "line_col": {
                          "end": {
                            "col": 18,
                            "line": 5
                          },
                          "start": {
                            "col": 5,
                            "line": 5
                          }
                        },
                        "start": 51
                      },
                      "file": "<root>/scenarios/any-star-clean/gallery.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "kind": "reference",
                      "target": "my-note"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "kind": "reference",
                  "target": "my-note"
                }
              }
            ],
            "field": "items"
          }
        ],
        "file": "<root>/scenarios/any-star-clean/gallery.md",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "title",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/any-star-clean/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 61,
                        "line_col": {
                          "end": {
                            "col": 47,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 22
                      },
                      "file": "<root>/scenarios/any-star-clean/my-note.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "A typed note referenced by an any* slot"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "A typed note referenced by an any* slot"
                }
              }
            ],
            "field": "title"
          }
        ],
        "file": "<root>/scenarios/any-star-clean/my-note.md",
        "section_presence": null
      }
    ]
  }
}
